first-section-complete

--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,24 @@ ul li [value="Accedi"]{
     color: white;
     margin: 5px;
 }
+
+.box{
+    max-width: 1200px;
+    min-width: 1200px;
+    margin: 80px auto;
+}
+
+.text{
+    width: 30%;
+    padding-top: 35px;
+    padding-right: 35px;
+}
+
+.text h3{
+    font-size: 45px;
+}
+
+.text p{
+     margin-top: 15px;
+    font-size: 20px;
+}
