--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header{
 }
 header .container{
     max-width: 1200px;
-    min-width: 1200px;
+    min-width: 60%;
     margin: 0 auto;
     padding-top: 25px;
 }
@@ -114,7 +114,7 @@ ul li [value="Accedi"]{
 
 .box{
     max-width: 1200px;
-    min-width: 1200px;
+    min-width: 60%;
     margin: 80px auto 200px auto;
 }
 
@@ -176,7 +176,7 @@ ul li h4{
 }
 .footer-container{
     max-width: 1200px;
-    min-width: 1200px;
+    min-width: 60%;
     margin: 0 auto;
     padding: 40px 0;
     border-bottom:2px solid lightcoral;
@@ -186,7 +186,7 @@ ul li h4{
     margin-top: 30px;
     padding-bottom: 60px;
     max-width: 1200px;
-    min-width: 1200px;
+    min-width: 60%;
     margin: 0 auto;
     padding: 40px 0;
 }
